--- a/plan.css
+++ b/plan.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html,
@@ -10,6 +11,7 @@ body {
   /* 롤백: 100% 높이 복귀 */
   height: 100%;
   font-family: sans-serif;
+  touch-action: manipulation;
 }
 
 body {
@@ -576,4 +578,25 @@ footer button {
   height: 8px;
   vertical-align: middle;  /* 텍스트랑 수평 맞춤 */
   transform: rotate(-45deg);
+}
+/* 전역 복사/길게누르기 메뉴 금지 */
+body {
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+  /* iOS long-press 메뉴 */
+}
+
+/* 입력 가능한 곳은 예외 허용 */
+input,
+textarea,
+[contenteditable="true"] {
+  user-select: text;
+  -webkit-user-select: text;
+  -webkit-touch-callout: default;
+}
+
+#headerNickname {
+  cursor: pointer;
 }
