--- a/play.css
+++ b/play.css
@@ -32,14 +32,14 @@ body.no-scroll {
   z-index: 1005;
   display: flex;
   flex-direction: column;
-  padding: 5vh 0.5vh;
+  padding: 2vh 0.5vh;
 }
 
 .adventure-header {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  background: #a76b6b;
+  background: #645e5e;
 }
 
 .btn-home {
@@ -99,18 +99,34 @@ body.no-scroll {
 }
 
 .hp-bar {
-  height: 20px;
-  background: #555;
+  position: relative;
+  width: 100%;
+  height: 2vh;
   margin: 5px;
+  background: #555;
+  border: 2px solid #645959;
   border-radius: 5px;
   overflow: hidden;
-  height: 1vh;
 }
 
 .hp-fill {
   height: 100%;
-  background: rgb(255, 255, 255);
-  border: 1px solid #645959;
+  background: rgb(252, 226, 226);
+  width: 100%;
+  transition: width 0.3s ease;
+  position: relative;
+}
+
+.hp-text {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  font-size: 1.5vh;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 1px 1px 2px #000;
+  pointer-events: none;
 }
 
 .puzzle-board {
@@ -125,8 +141,20 @@ body.no-scroll {
   aspect-ratio: 1 / 1;
   background-color: #ffffff;
   border: 1px solid #ffffff;
-}
 
+  /* 팔각형 모양 잘라내기 */
+  clip-path: polygon(30% 0%, 70% 0%,
+      100% 30%, 100% 70%,
+      70% 100%, 30% 100%,
+      0% 70%, 0% 30%);
+}
+/* 선택된 슬롯 강조 효과 */
+.puzzle-slot.focused {
+  outline: 3px solid #ff0000;
+  /* 빨간 테두리 */
+  outline-offset: -3px;
+  /* 안쪽으로 붙여서 자연스럽게 */
+}
 .skill-gauge {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
