--- a/play.css
+++ b/play.css
@@ -79,17 +79,25 @@ body.no-scroll {
 .ally-team {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 1vw;
   width: 100%;
-  margin-top: 0.5vh;
+  margin-top: 1vh;
 }
 
 .ally-slot {
   aspect-ratio: 1 / 1;
   background-color: #ffffff;
   border: 1px solid #ffffff;
+  display: flex;
+  /* 중앙 정렬 */
+  justify-content: center;
+  align-items: center;
 }
 
+.ally-slot img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 .card-slot {
   width: 50px;
   height: 50px;
@@ -100,13 +108,14 @@ body.no-scroll {
 
 .hp-bar {
   position: relative;
-  width: 100%;
+  width: 97%;
   height: 2vh;
-  margin: 5px;
+  margin: 1vh 2vw;
   background: #555;
   border: 2px solid #645959;
   border-radius: 5px;
   overflow: hidden;
+  
 }
 
 .hp-fill {
