--- a/play.css
+++ b/play.css
@@ -27,7 +27,7 @@ body.no-scroll {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #EFE7DD;
   color: white;
   z-index: 1005;
   display: flex;
@@ -60,7 +60,7 @@ body.no-scroll {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #f0eeee;
+  background: url("icons/B.png")center/100% 100% no-repeat;
   position: relative;
 }
 
@@ -218,7 +218,10 @@ body.no-scroll {
   grid-template-columns: repeat(6, 1fr);
   gap: 1vw;
   width: 100%;
-  background-color: #fbeded;
+  background-color: #FAF5EB;
+  border-radius: 10px;
+  border: #111111 4px solid;
+  padding: 3px;
 }
 
 .puzzle-slot {
